# ops-kit

./: LICENSE.txt  README.md  pyproject.toml
docs/: register-entra-application.md
src/opskit/: __about__.py  cli.py
src/opskit/sharepoint/: cli.py  client.py
tests/: __init__.py
